# zizhitongjian

./: .env.example  .gitignore  README.md  data_pipeline.md  data_usage_demo_visualization.ipynb  design.md  entity_resolution.py  knowledge_extraction.py  knowledge_query.py  knowledge_store.py  model.py  pyproject.toml  task_map.md
data/: juan_year_index.json  segment_year_index.json  segment_year_overrides.json
model/: README.md  __init__.py  action.py  book_structure.py  event.py  extraction.py  location.py  organization.py  polity.py  role.py  school.py  unified.py  usage_example.py
prompts/: sys_entity_relation_extraction.md
scripts/: build_all.py  build_juan_year_index.py  build_segment_year_index.py  geocode_locations_amap.py  merge_geocoding_into_unified_kb.py  smoke_validate.py  validate_segment_year_index.py
tests/: test_entity_resolution.py  test_llm_json.py
visualization/: .gitignore  README.md  index.html  package-lock.json  package.json
visualization/public/data/: juan_1.json  metadata.json  unified_knowledge.json
visualization/src/: App.tsx  index.css
visualization/src/components/: DetailPanels.tsx  FilterControls.tsx  GitHubRepoBadge.tsx  LocationsView.tsx  MapView.tsx  NetworkGraph.tsx  PowerChart.tsx  Timeline.tsx  index.ts
visualization/src/hooks/: useData.ts  useJuanYearIndex.ts  useUnifiedData.ts
visualization/src/state/: index.ts  urlState.ts
visualization/src/types/: index.ts  pipelineArtifacts.ts  unified.ts
zztj_pipeline/: __init__.py  artifacts.py  llm_json.py  segment_year_index.py  time_parsing.py
(+2 files in other folders)
