[project]
name = "zizhitongjian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-core>=1.2.0",
    "langchain-deepseek>=1.0.0",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "plotly>=6.2.0",
]
